# WagonOpenCV

./: CMakeLists.txt  main.cpp  wagon.cpp  wagon.h
